# tpu

./: README.md  requirements.txt
models/official/detection/: inference_fashion.py  pyproject.toml  serve.py
models/official/detection/modeling/: base_model.py
