[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
dependencies = [
  "tensorflow",
  "pillow",
  "pycocotools",
  "tqdm",
  "pyyaml",
  "cython",
  "matplotlib",
  "opencv-python-headless"
]
description = "TPU"
name = "tpu"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.setuptools]
py-modules = ["inference_fashion"]
